--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
+        "brianium/paratest": "^7.8",
         "fakerphp/faker": "^1.24",
         "laravel/pail": "^1.2",
         "laravel/pint": "^1.21",
@@ -89,7 +90,9 @@
             "npm run build:ssr",
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"php artisan inertia:start-ssr\" --names=server,queue,logs,ssr"
-        ]
+        ],
+        "lint": "chmod +x bin/lint.sh && ./bin/lint.sh",
+        "fix": "chmod +x bin/fix.sh && ./bin/fix.sh"
     },
     "extra": {
         "laravel": {
