--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "dependencies": {
-    "vitepress": "^1.5.0"
-  },
-  "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  }
+    "dependencies": {
+        "vitepress": "^1.6.3"
+    },
+    "scripts": {
+        "docs:dev": "vitepress dev docs",
+        "docs:build": "vitepress build docs",
+        "docs:preview": "vitepress preview docs",
+        "prepare": "husky"
+    },
+    "devDependencies": {
+        "husky": "^9.1.7"
+    }
 }
