Update environment configuration, enhance request validation, and implement security middleware
- Change APP_ENV to production and update APP_URL in .env.example
- Add security headers middleware for enhanced security
- Improve validation rules in StoreSecretRequest for name and content
- Use database transactions in ValidateSecretPasswordController to prevent race conditions
- Update routes to include throttling middleware for rate limiting
- Remove unused UpdateSecretRequest class

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/vue-starter-kit",
+    "name": "thavarshan/vault-0",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Vault-0 is a secure Laravel-based application for sharing encrypted, one-time secrets via expiring protected links.",
     "keywords": [
         "laravel",
-        "framework"
+        "framework",
+        "vault-0",
+        "secret-sharing",
+        "encryption",
+        "one-time-secret",
+        "secure-link"
     ],
     "license": "MIT",
     "require": {
