--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="Vault-0"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://vault-0.test
+APP_DEBUG=false
+APP_URL=https://vault-0.example.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
