Add security headers and improve middleware tests
- Added a new configuration file for security headers with CSP and HSTS settings.
- Implemented a middleware to apply security headers to responses.
- Created tests for the security headers middleware to ensure correct headers are applied in different environments.
- Added tests for validating secret passwords and ensuring proper error handling.
- Updated existing tests for the ShareSecretController to include a 404 response for non-existent secrets.
- Enhanced the ExpirationOption enum tests for better coverage.
- Added unit tests for the User and Secret models to verify functionality and attribute handling.
- Implemented policy tests for the SecretPolicy to ensure correct authorization logic.
- Added tests for the AppServiceProvider to verify HTTPS enforcement in production.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ yarn-error.log
 /.vscode
 /.zed
 .DS_Store
+
+# Test Coverage Reports
+/coverage-report/
+/coverage/
+/clover.xml
+/coverage.xml
+/coverage.clover
+/coverage.txt
+/coverage.json
+/.coverage_output/
+/phpunit-coverage.xml
+/c3.php
+/tests/_output/
+*.coverage
