Rename project from Vault-0 to Wisp, updating references in environment files, README, composer, package-lock, logo, and various components.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME="Vault-0"
+APP_NAME="Wisp"
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://vault-0.example.com
+APP_URL=https://wisp.example.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
